--- a/css/build.scss
+++ b/css/build.scss
@@ -17,18 +17,12 @@
  *
  * You should have received a copy of the GNU Affero General Public License
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
+ *
  */
 
-import AppMixin from './AppMixin'
-
-export default {
-	props: {
-		uuid: {
-			type: String,
-			default: '',
-		},
-	},
-
-	mixins: [AppMixin],
-
+// Various variables used by this app
+:root {
+	--top-bar-height: 60px;
 }
+
+@import 'icons';
