fixup! fixup! fixup! Designer view init
Signed-off-by: John Molakvoæ (skjnldsv) <skjnldsv@protonmail.com>

--- a/css/icons.scss
+++ b/css/icons.scss
@@ -63,3 +63,9 @@
 // LAYOUTS
 @include icon-black-white('layout-list', 'build', 1);
 @include icon-black-white('layout-avatar-header', 'build', 1);
+
+// Types
+@include icon-black-white('type-image', 'build', 1);
+@include icon-black-white('type-text', 'build', 1);
+@include icon-black-white('type-url', 'build', 1);
+@include icon-black-white('type-contact', 'build', 1);
